refactor: 知识库改为固定文档目录,按子目录切割自动导入
- LocalKbSeedRunner 按子目录分组:每个顶层子目录=一个知识库单元(目录内 md 合并),
  根目录 md 各自成库,跳过 assets/
- 种子导入自愈:已存在但向量化失败时自动重新向量化(配好 Key 后重启即恢复)
- APP_SEED_KB_DIR 默认指向 ptrade-qmt-docs-scraper/docs
- 前端移除上传页面/路由/导航,知识库为只读公共资源
- 实测:60 个 md 切割为 17 个知识库,重启幂等(重复=17,自动重向量化=17)
- 新增分组单测,全量 203 测试全绿

Co-Authored-By: Claude Code <noreply@anthropic.com>